--- a/main.ipynb
+++ b/main.ipynb
@@ -15,7 +15,8 @@
     "import json\n",
     "from Crypto.Cipher import AES\n",
     "from Crypto.Random import get_random_bytes\n",
-    "import Padding"
+    "import Padding\n",
+    "from qiskit.tools.visualization import circuit_drawer"
    ]
   },
   {
@@ -283,7 +284,7 @@
     "            print(k, v)\n",
     "\n",
     "        print(circuit.draw())\n",
-    "\n",
+    "        \n",
     "        return infoStrings"
    ]
   },
